# ai-video-note-extractor

./: .env.docker  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps_auth.py  exception_handlers.py
app/api/middleware/: request_id.py
app/api/v1/: router.py
app/core/: config.py  logging.py  middleware.py
app/db/: session.py
app/db/migrations/: env.py
app/db/models/: __init__.py  action_item.py  artifact.py  chapter.py  chat_message.py  chat_session.py  job.py  (+10 more)
app/schemas/: ask_video.py  errors.py  export.py  results.py  transcript.py  transcript_search.py
app/scripts/: __init__.py  backfill_video_metadata.py
app/services/: ask_video_service.py  chapter_parsing_service.py  citation_formatting.py  dev_auth.py  embedding_service.py  embeddings_client.py  idempotency.py  job_events_service.py  job_progress.py  job_progress_service.py  job_service.py  jwt_service.py  llm_client.py  llm_retry_service.py  markdown_formatting_service.py  password_policy.py  rate_limiter.py  retrieval_service.py  security.py  storage_service.py  text_sanitize.py  transcript_chunking_service.py  youtube_service.py
app/workers/: celery_app.py
docker/: api.Dockerfile  worker.Dockerfile
docs/: DEV_PUBLIC_URL.md
frontend/: .gitignore  middleware.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: theme-toggle.tsx
frontend/lib/: env.ts
tests/: test_idempotency.py  test_job_status.py  test_youtube_service.py
(+142 files in other folders)
